# minefair

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  flake.nix
.github/workflows/: minute-minefair.yml
field/: Cargo.toml
field/benches/: bench_save.minefair  benchmarks.rs
field/examples/: gen_laggy_save.rs
field/src/: cache.rs  field.rs  judges.rs  lib.rs  saving.rs  solver.rs
field/src/saving/: legacy.rs
minute/: Cargo.toml
minute/root/: index.html  main.css  main.js  puzzles
minute/root/insane/: count_densities.py  index.html  main.js  puzzles
minute/src/: main.rs
src/: field.rs  judges.rs  lib.rs  main.rs  options.rs  themes.rs  ui.rs
src/field/: judge_impl.rs  solver.rs
src/field/solver/: judges.rs
