[package]
name = "minefair"
authors = ["Christina Hanson <christinahansondesu@gmail.com>"]
repository = "https://github.com/LyricLy/minefair"
license = "MIT"
description = "An infinite and fair Minesweeper"
readme = "README.md"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.4", features = ["js"] }
rand = "0.8.4"
itertools = "0.10.3"
bincode = { version = "2.0.0-beta.1", features = ["derive"] }
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"

[profile.release]
opt-level = "s"
