[package]
name = "minefair"
authors = ["Christina Hanson <christinahansondesu@gmail.com>"]
repository = "https://github.com/LyricLy/minefair"
license = "MIT"
description = "An infinite and fair Minesweeper"
readme = "README.md"
version = "1.2.0"
edition = "2024"

[dependencies]
crossterm = "0.22.1"
rand = "0.8.4"
itertools = "0.10.3"
directories = "4.0.1"
bincode = { version = "2.0.0-beta.1", features = ["derive"] }
clap = { version = "3.0.10", features = ["derive", "wrap_help", "env"] }
