[package]
name = "minefair"
authors = ["Christina Hanson <christinahansondesu@gmail.com>"]
repository = "https://github.com/LyricLy/minefair"
license = "MIT"
description = "An infinite and fair Minesweeper"
readme = "README.md"
version = "1.2.0"
edition = "2024"

[dependencies]
crossterm = "0.22.1"
directories = "4.0.1"
bincode = { version = "2.0.1", features = ["derive"] }
clap = { version = "4.5.36", features = ["derive", "wrap_help", "env"] }
minefair_field = { path = "field" }
