[package]
name = "minefair_field"
version = "0.0.0"
edition = "2024"

[dependencies]
rand = { version = "0.9.0", features = ["alloc"] }

# trait impls
bincode = { version = "2.0.1", features = ["derive"] }
clap = { version = "4.5.36", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
