[package]
name = "minefair_field"
version = "0.0.0"
edition = "2024"

[dependencies]
rand = { version = "0.9.0", features = ["alloc"] }

# saving
savefile = { version = "0.19.0", features = ["derive"], default-features = false }
bincode = { version = "2.0.1", features = ["derive"] }

# trait impls
clap = { version = "4.5.45", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
